fix: add a patch for amqplib@0.10.4

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.4"
+  },
+  "patchedDependencies": {
+    "amqplib@0.10.4": "patches/amqplib@0.10.4.patch"
   }
 }
